Signed-off-by: Ruhunu <ruhunu@192.168.122.221>

--- a/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
@@ -64,8 +64,10 @@
 
 
 
-                        <p:dataTable  id="tblBills" value="#{searchController.patientInvestigations}" var="pi"  >
-
+                        <p:dataTable  id="tblBills" value="#{searchController.patientInvestigations}" var="pi" rowIndexVar="i" >
+                            <p:column  headerText="No" styleClass="alignTop" >
+                                <p:outputLabel value="#{i+1}" />
+                            </p:column>
                             <p:column  headerText="Bill" styleClass="alignTop" >
                                 <h:outputLabel id="lblBillNo" 
                                                value="#{pi.billItem.bill.insId}" 
