--- a/src/main/webapp/reportLab/report_lab_by_collection_centre_investigation_count.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_collection_centre_investigation_count.xhtml
@@ -87,7 +87,7 @@
                     <p:column headerText="Count" style="text-align: center" sortBy="#{c.count}">
                         <h:outputLabel value="#{c.count}" />
                     </p:column>
-                    <p:column headerText="Total Value" style="text-align: center" sortBy="#{c.count}">
+                    <p:column headerText="Total Value" style="text-align: right;" sortBy="#{c.count}">
                         <h:outputLabel value="#{c.total}" />
                     </p:column>
                     <p:columnGroup type="footer">  
@@ -95,14 +95,14 @@
                             <p:column footerText="Total" colspan="1" style="text-align:left"/>
                             <p:column footerText="#{investigationMonthSummeryOwnController.countTotal2}" >
                                 <f:facet name="footer">
-                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal2}">
+                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal}">
 
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
                             <p:column footerText="#{investigationMonthSummeryOwnController.countTotal2}" >
                                 <f:facet name="footer">
-                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal2}">
+                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.itemValue}">
 
                                     </h:outputLabel>
                                 </f:facet>
