Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
@@ -138,7 +138,7 @@
                     
                     <p:outputLabel value="CC Fee" style="position: absolute;left: 75%;top: 34.5%;text-align: right;font-size: 7pt;" />
                     <div class="ratesCollectingCenterPrintingRuhunu"  >
-                        <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1" rendered="#{cc.attrs.bill.cancelledBill eq null}"  >
+                        <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1" rendered="#{cc.attrs.bill.cancelledBill eq null and cc.attrs.bill.refundedBill eq null}"  >
                             <h:column >
                                 <h:outputLabel  rendered="#{bip1.bill.id eq cc.attrs.bill.id}"  value="#{bip1.transCCFee}"  style="font-size: 11px!important;" >
                                     <f:convertNumber pattern="#,##0.00" />
@@ -152,11 +152,18 @@
                                 </h:outputLabel>
                             </h:column>
                         </h:dataTable>
+                        <h:dataTable value="#{cc.attrs.bill.refundedBill.billItems}" var="bip1" rendered="#{cc.attrs.bill.refundedBill ne null}"  >
+                            <h:column >
+                                <h:outputLabel  rendered="#{bip1.bill.id eq cc.attrs.bill.refundedBill.id}"  value="#{bip1.transCCFee}"  style="font-size: 11px!important;" >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </h:column>
+                        </h:dataTable>
                     </div>
                     
                     <p:outputLabel value="Hos Fee" style="position: absolute;left: 85%;top: 34.5%;text-align: right;font-size: 7pt;" />
                     <div class="ratesWithOutCollectingCenterPrintingRuhunu"  >
-                        <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip2" rendered="#{cc.attrs.bill.cancelledBill eq null}"  >
+                        <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip2" rendered="#{cc.attrs.bill.cancelledBill eq null and cc.attrs.bill.refundedBill eq null}"  >
                             <h:column >
                                 <h:outputLabel  rendered="#{bip2.bill.id eq cc.attrs.bill.id}"  value="#{bip2.transWithOutCCFee}"  style="font-size: 11px!important;" >
                                     <f:convertNumber pattern="#,##0.00" />
@@ -166,6 +173,13 @@
                         <h:dataTable value="#{cc.attrs.bill.cancelledBill.billItems}" var="bip2" rendered="#{cc.attrs.bill.cancelledBill ne null}"  >
                             <h:column >
                                 <h:outputLabel  rendered="#{bip2.bill.id eq cc.attrs.bill.cancelledBill.id}"  value="#{bip2.transWithOutCCFee}"  style="font-size: 11px!important;" >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </h:column>
+                        </h:dataTable>
+                        <h:dataTable value="#{cc.attrs.bill.refundedBill.billItems}" var="bip2" rendered="#{cc.attrs.bill.refundedBill ne null}"  >
+                            <h:column >
+                                <h:outputLabel  rendered="#{bip2.bill.id eq cc.attrs.bill.refundedBill.id}"  value="#{bip2.transWithOutCCFee}"  style="font-size: 11px!important;" >
                                     <f:convertNumber pattern="#,##0.00" />
                                 </h:outputLabel>
                             </h:column>
@@ -196,10 +210,13 @@
                                     <h:outputLabel value="TOTAL" />
                                 </td>
                                 <td style="text-align: right!important; ">
-                                    <h:outputLabel value="#{cc.attrs.bill.total}" rendered="#{cc.attrs.bill.cancelledBill eq null}" >
+                                    <h:outputLabel value="#{cc.attrs.bill.total}" rendered="#{cc.attrs.bill.cancelledBill eq null and cc.attrs.bill.refundedBill eq null}" >
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                     <h:outputLabel value="#{cc.attrs.bill.cancelledBill.total}" rendered="#{cc.attrs.bill.cancelledBill ne null}">
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <h:outputLabel value="#{cc.attrs.bill.refundedBill.total}" rendered="#{cc.attrs.bill.refundedBill ne null}">
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </td>
