Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/dataAdmin/deleted_admission_book.xhtml
+++ b/src/main/webapp/dataAdmin/deleted_admission_book.xhtml
@@ -212,7 +212,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Retired Person"/>
                                     </f:facet>                                    
-                                    <h:outputLabel value="#{i.retirer.name}"  >
+                                    <h:outputLabel value="#{i.retirer.webUserPerson.name}"  >
                                     </h:outputLabel>
                                 </p:column>
 
