--- a/src/main/webapp/resources/income_report/opd_new.xhtml
+++ b/src/main/webapp/resources/income_report/opd_new.xhtml
@@ -8,7 +8,7 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-        <cc:attribute name="professional"/>
+        <cc:attribute name="professional"/>&nbsp;
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
