--- a/src/main/webapp/bill_cancel.xhtml
+++ b/src/main/webapp/bill_cancel.xhtml
@@ -117,7 +117,7 @@
                                             <p:printer target="gpBillPreviewCC" ></p:printer>
                                         </p:commandButton>
                                     </div>
-                                    <bi:opdCCBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}" dup="true"/>
+                                    <bi:opdCCBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}"/>
                                     <!--  <br/>
                                                             <h:panelGroup >
                                                                 <bi:opdBillPrintRuhunu bill="#{billSearch.bill.cancelledBill}" />                        
