--- a/src/main/webapp/reportLab/report_lab_hand_over_by_date_summery.xhtml
+++ b/src/main/webapp/reportLab/report_lab_hand_over_by_date_summery.xhtml
@@ -5,7 +5,8 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:pe="http://primefaces.org/ui/extensions">
+                xmlns:pe="http://primefaces.org/ui/extensions"
+                xmlns:au="http://java.sun.com/jsf/composite/autocomplete">
 
     <ui:define name="content">
         <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
@@ -21,10 +22,10 @@
                         <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss a" >
                         </p:calendar>
                         <h:outputLabel value="Instituion"/>
-                        <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.institution}"  
-                                        style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{institutionController.completeCompany}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                        <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.institution}" completeMethod="#{institutionController.completeCompany}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
                         </p:autoComplete>
-
+                        <h:outputLabel value="Department"/>
+                        <au:department value="#{pharmacySaleReport.toDepartment}" />
                     </h:panelGrid>
 
                     <h:panelGrid columns="4">
