Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
@@ -68,7 +68,7 @@
                         <h:outputLabel value="Department : "/>
                         <hr:department value="#{staffPaySheetComponentController.reportKeyWord.department}"/>
                         <h:outputLabel value="institution : "/>
-                        <hr:department value="#{staffPaySheetComponentController.reportKeyWord.institution}"/>
+                        <hr:institution value="#{staffPaySheetComponentController.reportKeyWord.institution}"/>
                         <h:outputLabel value="Staff Category : "/>
                         <hr:completeStaffCategory value="#{staffPaySheetComponentController.reportKeyWord.staffCategory}"/>
                         <h:outputLabel value="Designation : "/>
