--- a/src/main/webapp/reportLab/investigation_counts.xhtml
+++ b/src/main/webapp/reportLab/investigation_counts.xhtml
@@ -86,19 +86,18 @@
                                      paginator="true"
                                      rowIndexVar="i"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rowsPerPageTemplate="20, 50, 100"
+                                     rowsPerPageTemplate="20, 50, 100,500"
                                      >
                             <f:facet name="header" >
                                 <h:outputLabel value="Investigation Counts"/>
                             </f:facet>
-
-
-
                             <p:column >
+                                <f:facet name="header">
+                                    <h:outputLabel value="No"/>
+                                </f:facet>
                                 <h:outputLabel value="#{i+1}"  />
-                                
                             </p:column>
-                            <p:column headerText="Test ID" 
+                            <p:column headerText="Test ID" rendered="#{webUserController.hasPrivilege('Developers')}"
                                       sortBy="#{c.investigation.id}" 
                                       filterBy="#{c.investigation.id}"
                                       filterMatchMode="contains">
