--- a/src/main/webapp/reportLab/investigation_counts.xhtml
+++ b/src/main/webapp/reportLab/investigation_counts.xhtml
@@ -54,12 +54,15 @@
                                     <p:commandButton ajax="false"  value="Process"  
                                                      action="#{investigationMonthSummeryOwnControllerSession.createInvestigationMonthEndSummeryCounts}"
                                                      styleClass="noPrintButton" style="float: right;" />
-                                    <p:commandButton value="Print" actionListener="#{investigationMonthSummeryOwnControllerSession.prepareForPrint()}" 
+<!--                                    <p:commandButton value="Print" actionListener="#{investigationMonthSummeryOwnControllerSession.prepareForPrint()}" 
                                                      oncomplete="$('#frm\\:print').click()"
                                                      update=":frm:tbl"/>
                                     <p:commandButton id="print" value="Actual print" style="display: none">
                                         <p:ajax event="click" listener="#{investigationMonthSummeryOwnControllerSession.prepareForView()}" update=":frm:tbl"/>
                                         <p:printer target=":frm:tbl" />
+                                    </p:commandButton>-->
+                                    <p:commandButton id="print" value="Print">
+                                        <p:printer target="panelPrint" />
                                     </p:commandButton>
 
 
@@ -79,17 +82,21 @@
                         </tr>
                     </table>
 
-                    <p:panel id="panelPrint" styleClass="noBorder">
+                    <p:panel id="panelPrint" styleClass="noBorder summeryBorder">
 
-                        <p:dataTable id="tbl"  value="#{investigationMonthSummeryOwnControllerSession.items}" var="c" 
-                                     rows="20"
-                                     paginator="true"
-                                     rowIndexVar="i"
-                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rowsPerPageTemplate="20, 50, 100,500"
-                                     >
+                        <p:dataTable id="tbl"  value="#{investigationMonthSummeryOwnControllerSession.items}" var="c"
+                                     rowIndexVar="i">
                             <f:facet name="header" >
                                 <h:outputLabel value="Investigation Counts"/>
+                                <br></br>
+                                <h:outputLabel value="From  "/>                     
+                                <h:outputLabel value="#{investigationMonthSummeryOwnControllerSession.fromDate}" >
+                                    <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
+                                </h:outputLabel>
+                                <h:outputLabel value="- To "/>                       
+                                <h:outputLabel value="#{investigationMonthSummeryOwnControllerSession.toDate}" >
+                                    <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
+                                </h:outputLabel>
                             </f:facet>
                             <p:column >
                                 <f:facet name="header">
@@ -105,10 +112,6 @@
                                     <h:outputLabel value="Test ID"/>
                                 </f:facet>
                                 <h:outputLabel value="#{c.investigation.id}"  />
-                                <f:facet name="footer">
-                                    <h:outputLabel value="Total">
-                                    </h:outputLabel>
-                                </f:facet>
                             </p:column>
                             <p:column headerText="Test Name" 
                                       sortBy="#{c.investigation.name}" 
@@ -125,13 +128,16 @@
                             </p:column>
                             <p:column headerText="Count" style="text-align:right" 
                                       sortBy="#{c.count}">
+                                <f:facet name="header">
+                                    <h:outputLabel value="Count"/>
+                                </f:facet>
                                 <h:outputLabel value="#{c.count}" />
                                 <f:facet name="footer">
                                     <h:outputLabel value="#{investigationMonthSummeryOwnControllerSession.totalCount}">
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
-                            
+
 
                         </p:dataTable>
                     </p:panel>
